projects/nanousd-labs/nanousd/tests/usda/invalid/uint64_negative_zero.usda
#usda 1.0

def Scope "T"
{
    uint64 nope = -0
}
